# -2-

./: CMakeLists.txt  README.md  isvalidstring.cpp  isvalidstring.h  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
src/: isvalidstring.cpp  isvalidstring.h  main.cpp
src/.devcontainer/: devcontainer.json
test/: test_checkstring.cpp
test/.devcontainer/: Dockerfile  devcontainer.json
